--- a/Public/css/add-product.css
+++ b/Public/css/add-product.css
@@ -114,7 +114,7 @@ body{
 .images-main{
   width: 100%!important;
   background-color:#fff ;
-  height: 200px;
+  height: auto;
   /* display: flex; */
   /* justify-content: space-around;
   align-items: center; */
@@ -158,7 +158,7 @@ input{
 .images{
   width: 100%;
   background-color: #fff;
-  height: 200px;
+  height: auto;
   display: flex; 
   justify-content: space-around;
   align-items: center;
