Storage change into s3

--- a/Views/User/home.ejs
+++ b/Views/User/home.ejs
@@ -36,11 +36,18 @@
 
                     <div class="product-card shadow-lg p-3 bg-body rounded-3">
                       <% if (product.stock> 0) { %>
-                        <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
-                        <% } else { %>
-                          <span class="bg-danger z-3 text-white p-2 rounded ">Out of Stock</span>
+                        <%if(product.IsInCategoryOffer){%>
+                          <div class="d-flex justify-content-between ">
+                            <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                            <span class="text-success" style="font-weight: 700;"><%=product.categoryOffer.offerPercentage%>% off</span>
+                          </div>                        
+                        <%}else{%>
+                          <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                        <%}%>
+                      <% } else { %>
+                        <span class="bg-danger z-3 text-white p-2 rounded ">Out of Stock</span>
 
-                          <% } %>
+                      <% } %>
                             <a href="/product/details/<%= product._id%>" style="text-decoration: none;">
                               <div class="d-flex justify-content-center mt-2 " >
                                 <img style="width: 70%; max-height: 270px;"
@@ -105,7 +112,14 @@
 
                     <div class="product-card shadow-lg p-3 bg-body rounded-3">
                       <% if (product.stock> 0) { %>
-                        <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                        <%if(product.IsInCategoryOffer){%>
+                          <div class="d-flex justify-content-between ">
+                            <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                            <span class="text-success" style="font-weight: 700;"><%=product.categoryOffer.offerPercentage%>% off</span>
+                          </div>                        
+                        <%}else{%>
+                          <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                        <%}%>
                         <% } else { %>
                           <span class="bg-danger z-3 text-white p-2 rounded ">Out of Stock</span>
 
