--- a/Views/User/products.ejs
+++ b/Views/User/products.ejs
@@ -47,8 +47,6 @@
                   <label class="form-check-label" for="<%=data._id%>"><%=data.name%></label>
                 </div>
              <% })%>
-
-                 
                   <button type="submit" class="btn btn-info" >Submit</button>
               </form>
           </div>
@@ -91,7 +89,14 @@
 
                     <div class="product-card shadow-lg p-3 bg-body rounded-3">
                       <% if (product.stock> 0) { %>
-                        <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                        <%if(product.IsInCategoryOffer){%>
+                          <div class="d-flex justify-content-between ">
+                            <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                            <span class="text-success" style="font-weight: 700;"><%=product.categoryOffer.offerPercentage%>% off</span>
+                          </div>                        
+                        <%}else{%>
+                          <span class="bg-success z-3   text-white p-2 rounded ">In Stock</span>
+                        <%}%>
                         <% } else { %>
                           <span class="bg-danger z-3 text-white p-2 rounded ">Out of Stock</span>
 
